--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^16.3.1",
+    "eslint": "9.26.0",
+    "eslint-config-next": "15.3.2",
     "typescript": "^5"
   }
 }
